# cheerp-newlib

./: COPYING.NEWLIB  README.md  config.sub  libtool.m4
debian/: changelog  cheerp-newlib.install  control  copyright  docs  duetto-newlib.install  rules
newlib/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  autogen.sh  build-bc-libs.mk  build-bc-libs.sh  configure  configure.host  configure.in
newlib/doc/: Makefile.in  configure
newlib/libc/: Makefile.in  aclocal.m4  configure
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in  jp2uc.c
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/include/: _ansi.h  ctype.h  locale.h  malloc.h  math.h  stdint.h  stdio.h  stdlib.h  string.h
newlib/libc/locale/: Makefile.in
newlib/libc/machine/: Makefile.in  configure  configure.in
newlib/libc/machine/cheerp/: Makefile.am  Makefile.in  aclocal.m4  cheerpstdio.c  clientbridge.cpp  clientbridge.h  configure  configure.in  divti3.c  malloc.c  malloc_sbrk.c  stdio.c
newlib/libc/machine/cheerp/sys/: dirent.h
newlib/libc/misc/: Makefile.in  __dprintf.c
newlib/libc/posix/: Makefile.in
newlib/libc/reent/: Makefile.in  impure.c  reent.c  signalr.c
newlib/libc/search/: Makefile.in  hash.c  hash_bigkey.c  hash_page.c  qsort.c
newlib/libc/signal/: Makefile.in
newlib/libc/stdio/: Makefile.in  fclose.c  fdopen.c  fflush.c  fgets.c  fgetwc.c  findfp.c  fmemopen.c  fopencookie.c  fpurge.c  fputwc.c  fread.c  freopen.c  fseeko.c  funopen.c  fwrite.c  (+21 more)
newlib/libm/: Makefile.in  configure
rpmbuild/SPECS/: cheerp-newlib.spec
(+85 files in other folders)
